Sonar cleanup for JDK 17
Closes #414